--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "antd": "^4.16.13",
+    "antd": "4.17.0",
     "craco-antd": "^1.19.0",
     "craco-less": "^1.20.0",
     "less-loader": "^10.0.1",
