--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "less-loader": "^10.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-otp-input": "^2.4.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
